examples/test/testpolicy17161.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17161
  namespace: namespace416
spec:
  podSelector:
    matchLabels:
      key31: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value35
          key16: value25
          key20: value41
      podSelector:
        matchLabels:
          key23: value16
          key25: value15
          key49: value5
